@startuml

class PolarBear {
    - sprite: sf::Sprite
    - texture: sf::Texture
    - x: float
    - y: float
    - isHappy: bool
    + PolarBear()
    + draw(window)
    + move(dx, dy)
    + setHappy(happy: bool)
    + getBounds(): FloatRect
}

class Ball {
    - sprite: sf::Sprite
    - texture: sf::Texture
    - x: float
    - y: float
    - vx: float
    - vy: float
    - friction: float
    - isDragging: bool
    + Ball()
    + draw(window)
    + move(dx, dy)
    + setPosition(x, y)
    + getPosition(): Vector2f
    + update(window, dt)
    + setVelocity(vx, vy)
    + getRadius(): float
    + handleDrag(mousePos, isPressed)
}

class Food {
    - sprite: sf::Sprite
    - texture: sf::Texture
    - x: float
    - y: float
    - type: int
    - isDragging: bool
    + Food()
    + draw(window)
    + feed()
    + setPosition(x, y)
    + getPosition(): Vector2f
    + nextType()
    + handleDrag(mousePos, isPressed)
    + getBounds(): FloatRect
}

class Game {
    - window: sf::RenderWindow
    - polarBear: PolarBear
    - ball: Ball
    - food: Food
    + Game()
    + run()
}

class Menu {
    + Menu()
    + draw(window)
    + handleEvent(event)
}

' ===================== RELACIONES =====================
Game --> PolarBear : "tiene polarBear"
Game --> Ball : "tiene ball"
Game --> Food : "tiene food"
Game --> Menu : "tiene menu"
PolarBear --> "1" Animation : "usa"
Food --> "*" sf::Texture : "usa"
Ball --> "1" sf::Texture : "usa"

@enduml
